# mc_state_observation

./: .clang-format-common.sh  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml  package.yaml
CMakeModules/: Findmc_state_observation_ROS.cmake
debian/: changelog  control  rules
include/mc_state_observation/: AttitudeObserver.h  LegacyFlexibilityObserver.h  MocapObserver.h  MocapObserverROS.h  ObjectObserver.h  SLAMObserver.h  TiltObserver.h  filtering.h  gui_helpers.h
include/mc_state_observation/conversions/: kinematics.h
include/mc_state_observation/measurements/: Contact.h  ContactWithSensor.h  ContactsManager.h  ContactsManager.hpp  ContactsManagerConfiguration.h  IMU.h  Sensor.h  measurements.h  measurementsTools.h  measurementsTools.hpp
include/mc_state_observation/observersTools/: kinematicsTools.h  leggedOdometryTools.h  measurementsTools.h  measurementsTools.hpp
include/mc_state_observation/odometry/: LeggedOdometryManager.h  leggedOdometry.h
src/: AttitudeObserver.cpp  CMakeLists.txt  LegacyFlexibilityObserver.cpp  MocapObserver.cpp  MocapObserverROS.cpp  ObjectObserver.cpp  SLAMObserver.cpp  TiltObserver.cpp  filtering.cpp
src/conversions/: kinematics.cpp  kinematicsTools.cpp
src/observersTools/: kinematicsTools.cpp  leggedOdometryTools.cpp  measurementsTools.cpp
src/odometry/: LeggedOdometryManager.cpp  leggedOdometry.cpp  leggedOdometryTools.cpp
